psp-migration/add-runtimeClassName/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-runtimeClassName
policies:
- ../add-runtimeClassName.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources: patchedResource1.yaml
  policy: add-runtimeclassname
  resources:
  - pod01
  result: pass
  rule: add-prodclass
